# AugerNet

./: .gitignore  404.html  CITATION.cff  README copy.md  README.md  environment.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml  setup.py  sitemap.xml
.github/workflows/: docs.yml  release.yml  tests.yml
analyze_data/: plot_environment_analysis.py  plot_scatter_analysis.py
api/: index.html
api/cli/: index.html
api/config/: index.html
api/evaluation/: index.html
api/features/: index.html
api/graphs/: index.html
api/model/: index.html
api/train/: index.html
artifacts/: data_manifest.yml  index.html
artifacts/config/: cv.yml
artifacts/model_weights/: cebe_gnn_035_butina10_EQ3_h64_fold5.pth  cebe_gnn_035_random_EQ3_h64_fold1.pth
auger_cnn/configs/: auger_cnn_cv_butina.yml  auger_cnn_param.yml  auger_cnn_param_fwhm_merge.yml  auger_cnn_train.yml
auger_pred/: publication_plots.py
auger_pred/configs/: auger_gnn_cv_butina.yml  auger_gnn_train_035_fitted.yml  auger_gnn_train_035_stick.yml  auger_gnn_train_045_fitted.yml  auger_gnn_train_045_stick.yml
augernet/: __init__.py  __main__.py  backend.py  backend_cebe.py  backend_cnn.py  build_auger_cnn.py  build_molecular_graphs.py  carbon_dataframe.py  carbon_environment.py  cnn_train_utils.py  config.py  eneg_diff.py  env_vis.py  feature_assembly.py  gnn_train_utils.py  spec_utils.py  train_driver.py  unified_split.py
augernet/evaluation_scripts/: evaluate_auger_cnn_model.py  evaluate_auger_model.py  evaluate_cebe_model.py
cebe_pred/: locality_analysis.py  publication_plots.py  publication_plots_avobenzone.py  publication_plots_data.py  publication_plots_env.py  publication_plots_pdfb.py  publication_plots_pes_predict.py  publication_plots_si_tables.py
cebe_pred/avobenzone_analysis/: enol_avobenzene_calc_spec.txt  enol_keto_avobenzene_exp_spec.txt  enol_key.txt  keto_avobenzene_calc_spec.txt  keto_key.txt
config_examples/: cebe_train_cv_random.yml  cebe_train_default.yml  cv.yml  evaluate.yml  param.yml  predict.yml  train.yml
configuration/: index.html
docs/: artifacts.md  configuration.md  getting-started.md  index.md  run-modes.md
getting-started/: index.html
prepare_data/: prepare_data.py
run-modes/: index.html
scripts/: export_best_model.py  prepare_data.py
search/: search_index.json
tests/: conftest.py  test_carbon_environment.py  test_cebe_gnn_config.py  test_cebe_gnn_features.py  test_cebe_gnn_graph.py  test_cebe_gnn_model.py  test_config.py  test_eneg_diff.py  test_feature_assembly.py  test_gnn_utils.py
(+62 files in other folders)
