[project]
name = "augernet"
version = "0.1.1"
description = "GNN predictions of carbon 1s core-electron binding energies (CEBEs) from molecular geometry."
readme = "README.md"
license = "BSD-3-Clause"
license-files = ["LICENSE"]
authors = [
    { name = "Adam Fouda" }
]
requires-python = ">=3.13"
dependencies = [
    "gensim>=4.4.0",
    "matplotlib>=3.10.8",
    "numba>=0.64.0",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "pyyaml>=6.0.3",
    "rdkit>=2025.9.6",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "skipatom>=1.2.5",
    "torch>=2.10.0",
    "torch-geometric>=2.7.0",
    "torch-scatter>=2.1.2",
    "torch-sparse>=0.6.18",
    "torchvision>=0.25.0",
    "umap-learn>=0.5.11",
]

[tool.uv.extra-build-dependencies]
    torch-scatter = ["torch"]
    torch-sparse = ["torch"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/augernet"]

[project.optional-dependencies]
docs = [
    "mkdocs-material",
    "mkdocstrings[python]",
]
test = [
    "pytest>=8.0",
]

[project.scripts]
augernet = "augernet.__main__:main"
