[project]
name = "augernet"
version = "0.1.16"
description = "GNN predictions of carbon 1s core-electron binding energies (CEBEs) from molecular geometry."
readme = "README.md"
license = "BSD-3-Clause"
authors = [
    { name = "Adam Fouda" }
]
requires-python = ">=3.10"
dependencies = [
    "gensim>=4.3.3",
    "matplotlib>=3.10.1",
    "numba>=0.63.1",
    "numpy>=1.26.4",
    "pandas>=2.2.3",
    "pytest>=8.0",
    "pyyaml>=6.0.3",
    "rdkit>=2025.03.1",
    "scikit-learn>=1.7.2",
    "scipy>=1.13.1",
    "seaborn>=0.13.2",
    "skipatom>=1.2.5",
    "torch>=2.2.0",
    "torch-geometric>=2.6.1",
    "torch-scatter>=2.1.2",
    "torch-sparse>=0.6.18",
    "torchvision>=0.17.0",
    "umap-learn>=0.5.11",
]

[tool.uv.extra-build-dependencies]
    torch-scatter = ["torch"]
    torch-sparse = ["torch"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/augernet"]

[project.optional-dependencies]
docs = [
    "mkdocs-material",
    "mkdocstrings[python]",
]

[project.scripts]
augernet = "augernet.__main__:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "essential: fast tests suitable for CI (GitHub Actions)",
    "full: longer tests (data prep, real molecule graphs, etc.)",
]
